refac: fix overflow bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,4 +4,15 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
+}
+
+* {
+    box-sizing: border-box;
 }
